--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--Light-gray);
   font-size: 15px;
   font-family: "Outfit", sans-serif;
@@ -20,6 +20,15 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
 .card {
